# libembroidery-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  libembroidery.h
src/: bindings.rs  lib.rs
