[package]
name = "libembroidery-sys"
version = "0.1.1"
description = "Rust FFI bindings for libembroidery"
readme = "README.md"
license-file = "LICENCE"
authors = ["Declan Soper <soperdeclan@gmail.com>"]
repository = "https://github.com/hakasec/libembroidery-sys"
edition = "2018"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.42.2"
